# seiws

./: .gitignore  CONVENTIONS.md  pyproject.toml
src/seiws/: __init__.py  client.py  config.py  estrutura_de_dados.py  exceptions.py  helpers.py
tests/: config.py  constants.py  test_atribuir_processo.py  test_client.py  test_consultar_documento.py  test_consultar_procedimento.py  test_listar_unidades.py  test_listar_usuarios.py  test_manual.py
