[project]
name = "seiws"
version = "0.1.0"
description = "Cliente para o Web Service do SEI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.9.2",
    "python-dotenv>=1.0.1",
    "zeep>=4.2.1",
]

[project.scripts]
seiws = "seiws:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.3",
]
